syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.utm.broker.rcp";
package com.utm.broker;

message BrokerRequest {
  int32 id = 1;
  string topic = 2;
  string message = 3;
}

message BrokerResponse {
  string greeting = 1;
}

service BrokerService {
  rpc hello(BrokerRequest) returns (stream BrokerResponse);
}